# quickstart

./: pyproject.toml  requirements.txt
backend/python/: railway.json  requirements.txt
